feat: Implement fullscreen toggle, progressive environment color tinting based on portal proximity, and client color inheritance.

--- a/docs/Conclusion.tex
+++ b/docs/Conclusion.tex
@@ -25,6 +25,8 @@ As seguintes funcionalidades foram implementadas com sucesso:
     \item \textbf{Física Básica}: Deteção de colisões e impedimento de atravessamento de paredes.
     
     \item \textbf{Texturas PBR}: Utilização de texturas de alta qualidade com mapas de normal e rugosidade para realismo visual.
+    
+    \item \textbf{Transição de Cor Progressiva}: Sistema de mudança gradual da cor do ambiente baseado na proximidade ao portal, proporcionando feedback visual atmosférico ao jogador.
 \end{itemize}
 
 O desenvolvimento deste projeto proporcionou aprendizagem valiosa em áreas como:
