comentarios todos em ingles

--- a/docs/Conclusion.tex
+++ b/docs/Conclusion.tex
@@ -4,7 +4,8 @@
 
 Este projeto atingiu com sucesso os seus objetivos principais, o que resultou numa aplicação 3D interativa funcional que demonstra a aplicação prática de conceitos fundamentais de computação gráfica.
 
-\subsection{O que se Fez}
+\subsection{Trabalho Realizado}
+
 As seguintes funcionalidades foram implementadas com sucesso:
 
 \begin{itemize}
@@ -18,7 +19,8 @@ As seguintes funcionalidades foram implementadas com sucesso:
     
     \item \textbf{Câmara FPS}: Controlos de primeira pessoa intuitivos com movimento WASD e rotação com rato.
     
-    \item \textbf{Ambiente 3D Completo}: Para além do labirinto, inclusão de ambiente exterior com árvores procedurais, portal arquitetônico e texturas realistas.
+    \item \textbf{Ambiente 3D Completo}: Para além do labirinto, inclusão de ambiente exterior com árvores procedurais, portal arquitetónico e texturas realistas.
+
     
     \item \textbf{Interface de Utilizador}: Sistema de renderização de texto para diálogos e feedback ao jogador.
     
