--- a/docs/Technologies.tex
+++ b/docs/Technologies.tex
@@ -64,7 +64,8 @@ O projeto está configurado para gerar dois executáveis distintos:
 \end{itemize}
 
 \section{Sockets TCP} \label{sec:tech_sockets}
-Para a comunicação em rede entre o host e o cliente, o projeto utiliza \textbf{sockets TCP} POSIX. Esta escolha permite comunicação fiável entre processos através de uma interface de programação standard disponível em sistemas Unix-like.
+Para a comunicação em rede entre o host e o cliente, o projeto utiliza \textbf{sockets TCP} POSIX. Esta escolha permite comunicação fiável entre processos através de uma interface de programação padrão disponível em sistemas Unix-like.
+
 
 \section{Resumo de Bibliotecas} \label{sec:tech_resumo}
 
