--- a/docs/report.tex
+++ b/docs/report.tex
@@ -1,4 +1,7 @@
 \documentclass[11pt,twoside]{template-ubi/Styling}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+
 
 \usepackage{listings}
 \lstset{
