--- a/docs/Introduction.tex
+++ b/docs/Introduction.tex
@@ -1,7 +1,8 @@
 \chapter{Introdução}\footnote{Este relatório foi produzido com recurso ao template \LaTeX\ para teses e dissertações da Universidade da Beira Interior \cite{template-ubi-latex}, uma versão não oficial mantida pela comunidade.} \label{chap:intro}
 
 \section{História e Enquadramento} \label{sec:intro_historia}
-O jogador encontra-se num labirinto, com uma lanterna que ilumina o caminho e uma citação pouco esclarecedora. Percebe que a mesma pessoa que vai sair dali, não é a mesma que entrou.
+O jogador encontra-se num labirinto, com uma lanterna que ilumina o caminho e uma citação pouco esclarecedora. Percebe que a mesma pessoa que vai sair dali não é a mesma que entrou.
+
 
 \section{Motivação} \label{sec:intro_motivacao}
 A escolha de desenvolver um jogo de labirinto 3D foi motivada por diversos fatores:
@@ -22,7 +23,8 @@ Os principais objetivos deste projeto são:
     \item Implementar geração procedural de labirintos através do algoritmo de Kruskal.
     \item Criar um sistema de iluminação dinâmica com efeito de lanterna (\textit{flashlight/spotlight}).
     \item Implementar comunicação em rede entre dois jogadores (modo host e cliente).
-    \item Desenvolver sistema de camera em primeira pessoa com controlos intuitivos.
+    \item Desenvolver sistema de câmara em primeira pessoa com controlos intuitivos.
+
     \item Adicionar elementos visuais como ambiente exterior, árvores e portal de saída.
     \item Implementar renderização de texto para interface com o utilizador.
     \item Aplicar texturas e materiais realistas aos elementos do jogo.
